# testing-reactjs

./: README.md  package-lock.json
back/: README.md
back/meetup/: pyproject.toml
back/meetup/meetup/: client.py  controller.py  models.py
front/: package-lock.json  package.json
front/src/: App.js  index.js
front/src/components/layout/: MainNavigation.js
front/src/components/meetup/: MeetupItem.js  NewMeetupForm.js
front/src/pages/: AllMeetups.js  Favorites.js  NewMeetup.js
front/src/store/: favorites-context.js
src/: App.js  index.js
src/components/layout/: Layout.js  MainNavigation.module.css
src/components/meetup/: NewMeetupForm.js
src/pages/: Favorites.js  NewMeetup.js
