[tool.poetry]
name = "meetup"
version = "0.1.0"
description = ""
authors = ["AlexandreBiguet <alexandre.biguet@easyence.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
requests = "^2.26.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
